<resources>
    <string name="app_name">GameRatingApp</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <!-- Start Fragment -->
    <string name="welcome_message">Welcome to the Games Rating App!</string>
    <string name="start_info">Click START to start rating :)</string>
    <string name="start">Start</string>

    <!-- Rating Fragment -->
    <string name="rate_info">Rate the following game from 1 to 5 stars!</string>
    <string name="to_summarise">To summarise</string>

    <!-- Games (doesn't get used from here)-->
    <string name="red_dead2">Red Dead Redemption 2</string>
    <string name="tombraider">Shadow of the Tombraider</string>
    <string name="rocket_league">"Rocket League"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>